gitignore: Ignore temporary tex files

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ Documentation/SRS/tex/SRS.out
 Documentation/SRS/tex/SRS.synctex.gz
 Documentation/SRS/tex/SRS.toc
 Documentation/SRS/tex/srs.odt
-
+Documentation/SRS/tex/SRS.dvi
+Documentation/SRS/tex/SRS.tex~
