Security: Switched to xml

--- a/Skeleton/src/main/webapp/WEB-INF/web.xml
+++ b/Skeleton/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,9 @@
     <display-name>Sample App</display-name>
     <distributable/>
 
-<!--     <welcome-file-list> -->
-<!--         <welcome-file>index</welcome-file> -->
-<!--     </welcome-file-list> -->
+    <welcome-file-list>
+        <welcome-file>index</welcome-file>
+    </welcome-file-list>
         
     
     <!-- import config files -->    
@@ -16,7 +16,7 @@
     	<param-name>contextConfigLocation</param-name>
     	<param-value>
     		/WEB-INF/config/springData.xml
-<!--     		/WEB-INF/config/springSecurity.xml -->
+    		/WEB-INF/config/springSecurity.xml
     	</param-value>
 	</context-param>
     
