Add spring.boot to dependencies

--- a/Skeleton/pom.xml
+++ b/Skeleton/pom.xml
@@ -7,12 +7,19 @@
 	<artifactId>Skeleton</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
-
+    
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.1.8.RELEASE</version>
+    </parent>
+    
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<repositories>
+	
 		<repository>
 			<id>atlassian</id>
 			<name>Atlassian repo</name>
@@ -24,6 +31,7 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+	
 		<repository>
 			<id>atlassian-snapshot</id>
 			<name>Atlassian repo</name>
@@ -35,6 +43,7 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
+	
 	</repositories>
 
 	<build>
@@ -198,6 +207,11 @@
 			<version>3.2.5.RELEASE</version>
 		</dependency>
 
+<!-- Spring boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 	</dependencies>
 
 
@@ -210,6 +224,7 @@
 			</activation>
 			<build>
 				<plugins>
+	
 					<plugin>
 						<groupId>org.mortbay.jetty</groupId>
 						<artifactId>maven-jetty-plugin</artifactId>
@@ -240,6 +255,13 @@
 							</execution>
 						</executions>
 					</plugin>
+					
+<!-- 					Spring boot -->
+					<plugin>
+                		<groupId>org.springframework.boot</groupId>
+                		<artifactId>spring-boot-maven-plugin</artifactId>
+            		</plugin>
+				
 				</plugins>
 			</build>
 		</profile>
