--- a/Skeleton/pom.xml
+++ b/Skeleton/pom.xml
@@ -211,14 +211,17 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>maven-jetty-plugin</artifactId>
-						<version>6.1.26</version>
-						<configuration>
-							<useTestClasspath>true</useTestClasspath>
-							<contextPath>/Skeleton</contextPath>
-							<stopKey>1</stopKey>
-							<stopPort>9999</stopPort>
+<groupId>org.eclipse.jetty</groupId>
+<artifactId>jetty-maven-plugin</artifactId>
+<version>9.2.3.v20140905</version>
+<configuration>
+<stopKey>1</stopKey>
+<stopPort>9999</stopPort>
+<useTestClasspath>true</useTestClasspath>
+<contextPath>/</contextPath>
+<webApp>
+<tempDirectory>${basedir}/temp</tempDirectory>
+</webApp>
 						</configuration>
 						<executions>
 							<execution>
