--- a/Skeleton/src/main/webapp/WEB-INF/web.xml
+++ b/Skeleton/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <display-name>Sample App</display-name>
+    <display-name>StudiHome</display-name>
     <distributable/>
 
     <welcome-file-list>
@@ -36,7 +36,7 @@
 
     <!-- Spring MVC Servlet config -->
     <servlet>
-        <servlet-name>myApp</servlet-name>
+        <servlet-name>mainServer</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  <!-- Dispatcher Servlet -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -46,7 +46,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>myApp</servlet-name>
+        <servlet-name>mainServer</servlet-name>
         <url-pattern>/</url-pattern>			<!-- use servlet for any page matching url pattern  -->
     </servlet-mapping>
 
