--- a/Skeleton/pom.xml
+++ b/Skeleton/pom.xml
@@ -197,9 +197,42 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>3.2.5.RELEASE</version>
 		</dependency>
-
+		
+		<!-- Spring test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.2.3.RELEASE</version>
+		</dependency>
+		<!-- avoid class not found exeption <dependency> <groupId>com.google.code.protoj</groupId> 
+			<artifactId>protoj-nodep</artifactId> <version>1.8.4</version> <scope>test</scope> 
+			</dependency> -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- this is included in junit, make sure junit it version 4.11 -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-
 
 
 	<profiles>
@@ -211,17 +244,17 @@
 			<build>
 				<plugins>
 					<plugin>
-<groupId>org.eclipse.jetty</groupId>
-<artifactId>jetty-maven-plugin</artifactId>
-<version>9.2.3.v20140905</version>
-<configuration>
-<stopKey>1</stopKey>
-<stopPort>9999</stopPort>
-<useTestClasspath>true</useTestClasspath>
-<contextPath>/</contextPath>
-<webApp>
-<tempDirectory>${basedir}/temp</tempDirectory>
-</webApp>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+						<version>9.2.3.v20140905</version>
+						<configuration>
+							<stopKey>1</stopKey>
+							<stopPort>9999</stopPort>
+							<useTestClasspath>true</useTestClasspath>
+							<contextPath>/</contextPath>
+							<webApp>
+								<tempDirectory>${basedir}/temp</tempDirectory>
+							</webApp>
 						</configuration>
 						<executions>
 							<execution>
@@ -243,6 +276,17 @@
 							</execution>
 						</executions>
 					</plugin>
+
+					<!-- Do not run tests -->
+		 			<!-- <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.17</version>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin> -->
+					
 				</plugins>
 			</build>
 		</profile>
